[package]
name = "kubera"
version = "0.0.1"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/igumnoff/kubera"
documentation = "https://docs.rs/kubera"
license-file = "LICENSE"
keywords = []
categories = []
readme = "README.md"
description = "Kubera library"


[dependencies]
bincode = { version = "2.0.0-rc.3" }
chrono = { version = "0.4.38"}
redb = "2.1.1"
crossbeam-queue = "0.3.11"